--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_dotenv: ^5.2.1
   http: ^1.2.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
